--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
         <div
           class="text_areas line_heigh1 text_align_center"
           style="
-            border-top: 2px solid #f4cce0;
-            border-bottom: 2px solid #f4cce0;
-            max-width: 230px;
+            border-top: 2px solid #ffdee8;
+            border-bottom: 2px solid #ffdee8;
+            max-width: 241px;
             margin: 0 auto 50px;
             padding: 15px 0;
           "
         >
-          <p class="font_weight_bd">2025년 1월 18일 토요일 오전 11시</p>
+          <p>2025년 1월 18일 토요일 오전 11시</p>
           <br />
-          <p class="font_weight_bd">여의도 켄싱턴호텔</p>
+          <p>여의도 켄싱턴호텔</p>
           <br />
-          <p class="font_weight_bd">15층 센트럴파크 웨딩홀</p>
+          <p>15층 센트럴파크 웨딩홀</p>
         </div>
       </section>
       <!-- Main [Photo + Name + Date + Venue] -->
@@ -224,78 +224,18 @@
           </div>
           <div class="relation_con row_couple_name">
             <div class="relation_list groom">
-              <span class="parents">
-                <span
-                  class="img_box"
-                  style="display: none"
-                  var="isGroomDadAngel0"
-                >
-                </span>
-                <span
-                  class="char_box"
-                  style="display: none"
-                  var="isGroomDadAngel1"
-                  >故</span
-                >
-                <span var="groomDadLastName">김</span
-                ><span var="groomDadFirstName">종은</span>
-                <span var="groomDot">·</span>
-                <span
-                  class="img_box"
-                  style="display: none"
-                  var="isGroomMomAngel0"
-                >
-                </span>
-                <span
-                  class="char_box"
-                  style="display: none"
-                  var="isGroomMomAngel1"
-                  >故</span
-                >
-                <span var="groomMomLastName">권</span
-                ><span var="groomMomFirstName">영애</span>
-              </span>
-              <span class="relation" style="display: inline-block">
-                <span>의</span>
-                <span var="groomRelationName">장남</span>
+              <span var="groomDadLastName"
+                >김종은<span style="display: inline-block; margin: 0 4px"
+                  >&middot;</span
+                >권영애의 장남
               </span>
             </div>
             <div class="relation_list bride">
-              <span class="parents">
-                <span
-                  class="img_box"
-                  style="display: none"
-                  var="isBrideDadAngel0"
-                >
-                </span>
-                <span
-                  class="char_box"
-                  style="display: none"
-                  var="isBrideDadAngel1"
-                  >故</span
-                >
-                <span var="brideDadLastName">이</span
-                ><span var="brideDadFirstName">정엽</span>
-                <span var="brideDot" style="display: inline-block">·</span>
-                <span
-                  class="img_box"
-                  style="display: none"
-                  var="isBrideMomAngel0"
-                >
-                </span>
-                <span
-                  class="char_box"
-                  style="display: none"
-                  var="isBrideMomAngel1"
-                  >故</span
-                >
-                <span var="brideMomLastName">김</span
-                ><span var="brideMomFirstName">혜숙</span>
-              </span>
-              <span class="relation" style="display: inline-block">
-                <span>의</span>
-                <span var="brideRelationName">장녀</span>
-              </span>
+              <span var="brideDadLastName"
+                >이정엽<span style="display: inline-block; margin: 0 4px"
+                  >&middot;</span
+                >김혜숙의 장녀</span
+              >
             </div>
           </div>
         </div>
@@ -348,6 +288,9 @@
           <div class="main-img-wrap">
             <img src="./image/6.jpg" alt="" class="gallery-image" />
           </div>
+          <div class="main-img-wrap">
+            <img src="./image/20.jpg" alt="" class="gallery-image" />
+          </div>
 
           <div class="main-img-wrap">
             <img src="./image/8.jpg" alt="" class="gallery-image" />
@@ -377,9 +320,6 @@
           </div>
           <div class="main-img-wrap">
             <img src="./image/19.jpg" alt="" class="gallery-image" />
-          </div>
-          <div class="main-img-wrap">
-            <img src="./image/20.jpg" alt="" class="gallery-image" />
           </div>
         </div>
       </section>
@@ -422,7 +362,11 @@
                   <img src="./image/6.jpg" alt="" />
                 </div>
               </div>
-
+              <div class="swiper-slide">
+                <div class="main-img-wrap">
+                  <img src="./image/20.jpg" alt="" />
+                </div>
+              </div>
               <div class="swiper-slide">
                 <div class="main-img-wrap">
                   <img src="./image/8.jpg" alt="" />
@@ -468,11 +412,6 @@
               <div class="swiper-slide">
                 <div class="main-img-wrap">
                   <img src="./image/19.jpg" alt="" />
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="main-img-wrap">
-                  <img src="./image/20.jpg" alt="" />
                 </div>
               </div>
             </div>
