--- a/index.html
+++ b/index.html
@@ -481,7 +481,11 @@
           >
             <div class="account_box font_size15" style="color: #8ab8da">
               신랑측
-              <img src="./image/heart.png" alt="" style="height: 20px" />
+              <img
+                src="./image/heart_blue_img.png"
+                alt=""
+                style="height: 20px"
+              />
             </div>
             <ul class="account_list" style="display: none">
               <li var="isGroomBank">
@@ -500,7 +504,7 @@
                   </div>
                   <div style="display: flex">
                     <div class="acc_num" var="groomBankAcc">
-                      1004-249-170333
+                      1002-249-170333
                     </div>
                     <div class="acc_name">
                       <span class="bank" var="groomBankName">우리은행</span>
@@ -571,7 +575,7 @@
                   </div>
                   <div style="display: flex">
                     <div class="acc_num" var="brideMomBankAcc">
-                      1068-02-000-784
+                      1068-02-000784
                     </div>
                     <div class="acc_name">
                       <span class="bank" var="brideMomBankName">농협은행</span>
@@ -594,7 +598,7 @@
           >
             <div
               class="account_box bride_account font_size15"
-              style="color: #f7b3dd"
+              style="color: #ffcadf"
             >
               신부측
               <img src="./image/heart.png" alt="" style="height: 20px" />
@@ -611,11 +615,13 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 class="font_size15" style="color: #f7b3dd">신부</h4>
+                    <h4 class="font_size15" style="color: #ffcadf">신부</h4>
                     <span class="holder" var="brideBankHolder">이예나</span>
                   </div>
                   <div style="display: flex">
-                    <div class="acc_num" var="brideBankAcc">33313-961-841</div>
+                    <div class="acc_num" var="brideBankAcc">
+                      3333-13-9961841
+                    </div>
                     <div class="acc_name">
                       <span class="bank" var="brideBankName">카카오뱅크</span>
                     </div>
@@ -647,7 +653,7 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 class="font_size15" style="color: #f7b3dd">
+                    <h4 class="font_size15" style="color: #ffcadf">
                       신부 아버지
                     </h4>
                     <span class="holder" var="brideDadBankHolder">이정엽</span>
@@ -679,14 +685,14 @@
                 />
                 <div class="left_box">
                   <div>
-                    <h4 class="font_size15" style="color: #f7b3dd">
+                    <h4 class="font_size15" style="color: #ffcadf">
                       신부 어머니
                     </h4>
                     <span class="holder" var="brideMomBankHolder">김혜숙</span>
                   </div>
                   <div style="display: flex">
                     <div class="acc_num" var="brideMomBankAcc">
-                      100090-51-164879
+                      100090-51-164878
                     </div>
                     <div class="acc_name">
                       <span class="bank" var="brideMomBankName">농협은행</span>
@@ -705,7 +711,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer" style="border: 1px solid #e9e9e9">
+    <footer class="footer" style="border: 1px solid #e9e9e9; margin-top: 100px">
       <div class="footer-content">
         <div>
           <img
