--- a/index.html
+++ b/index.html
@@ -21,6 +21,82 @@
     />
     <meta property="og:site_name" content="준수 ♡ 예나 결혼합니다." />
     <meta property="og:locale" content="ko_KR" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="https://kofhoom.github.io/fc/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="https://kofhoom.github.io/fc/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="https://kofhoom.github.io/fc/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="https://kofhoom.github.io/fc/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="https://kofhoom.github.io/fc/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="https://kofhoom.github.io/fc/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="https://kofhoom.github.io/fc/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="https://kofhoom.github.io/fc/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://kofhoom.github.io/fc/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="https://kofhoom.github.io/fc/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://kofhoom.github.io/fc/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="https://kofhoom.github.io/fc/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://kofhoom.github.io/fc/favicon-16x16.png"
+    />
+    <link rel="manifest" href="https://kofhoom.github.io/fc/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="https://kofhoom.github.io/fc/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
     <title>김준수 ♡ 이예나 결혼합니다.</title>
     <link rel="stylesheet" href="./css/common.css" />
     <link
