--- a/index.html
+++ b/index.html
@@ -318,23 +318,33 @@
       </section>
       <!-- Calendar Section -->
       <section class="section hidden" id="calendar">
-        <div class="title">
-          <p>☆</p>
-          <p>&nbsp;⋆｡</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;☆</p>
-          <p>&nbsp;&nbsp;☆</p>
+        <div class="title star_font">
+          <p style="font-family: 'MonoplexKR-Regular'">☆</p>
+          <p style="font-family: 'MonoplexKR-Regular'">&nbsp;⋆｡</p>
+          <p style="font-family: 'MonoplexKR-Regular'">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;☆
+          </p>
+          <p style="font-family: 'MonoplexKR-Regular'">&nbsp;&nbsp;☆</p>
         </div>
         <div class="title"></div>
         <div class="main-img-wrap reset">
           <img src="./image/calendar.jpg" alt="" />
         </div>
-        <div class="title">
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;˚｡⋆ ☆</p>
-          <p>☆</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;☆</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;☆</p>
-          <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•°˳</p>
-          <p>&nbsp;&nbsp;&nbsp;★</p>
+        <div class="title .star_font">
+          <p style="font-family: 'MonoplexKR-Regular'">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;˚｡⋆ ☆
+          </p>
+          <p style="font-family: 'MonoplexKR-Regular'">☆</p>
+          <p style="font-family: 'MonoplexKR-Regular'">
+            &nbsp;&nbsp;&nbsp;&nbsp;☆
+          </p>
+          <p style="font-family: 'MonoplexKR-Regular'">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;☆
+          </p>
+          <p style="font-family: 'MonoplexKR-Regular'">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•°˳
+          </p>
+          <p style="font-family: 'MonoplexKR-Regular'">&nbsp;&nbsp;&nbsp;★</p>
         </div>
       </section>
 
@@ -802,7 +812,7 @@
       </div>
     </footer>
     <!-- Top 버튼 -->
-    <button id="top-btn" class="top-button">▲</button>
+    <button id="top-btn" class="top-button star_font">▲</button>
     <button id="kakao-link-btn" class="top-button2">
       <img src="./image/shere.png" alt="" />
     </button>
