--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
             padding: 15px 0;
           "
         >
-          <p>2025년 1월 18일 토요일 오전 11시</p>
+          <p style="font-size: 16.25px">2025년 1월 18일 토요일 오전 11시</p>
           <br />
-          <p>여의도 켄싱턴호텔</p>
+          <p style="font-size: 16.25px">여의도 켄싱턴호텔</p>
           <br />
-          <p>15층 센트럴파크 웨딩홀</p>
+          <p style="font-size: 16.25px">15층 센트럴파크 웨딩홀</p>
         </div>
       </section>
       <!-- Main [Photo + Name + Date + Venue] -->
@@ -301,14 +301,24 @@
           <div class="relation_con row_couple_name">
             <div class="relation_list groom">
               <span var="groomDadLastName"
-                >김종은<span style="display: inline-block; margin: 0 4px"
+                >김종은<span
+                  style="
+                    display: inline-block;
+                    margin: 0 4px;
+                    font-family: 'MonoplexKR-Regular';
+                  "
                   >&middot;</span
                 >권영애의 장남
               </span>
             </div>
             <div class="relation_list bride">
               <span var="brideDadLastName"
-                >이정엽<span style="display: inline-block; margin: 0 4px"
+                >이정엽<span
+                  style="
+                    display: inline-block;
+                    margin: 0 4px;
+                    font-family: 'MonoplexKR-Regular';
+                  "
                   >&middot;</span
                 >김혜숙의 장녀</span
               >
@@ -413,7 +423,9 @@
       <!-- Modal for Swiper -->
       <div class="modal-overlay">
         <div class="swiper-modal">
-          <span class="close-btn">×</span>
+          <span class="close-btn" style="font-family: 'MonoplexKR-Regular'"
+            >×</span
+          >
           <!-- Swiper -->
           <div class="swiper mySwiper swiper-initialized swiper-horizontal">
             <div
