--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           </div>
           <div class="relation_con row_couple_name">
             <div class="relation_list groom">
-              <span var="groomDadLastName"
+              <span var="groomDadLastName" style="font-size: 13.6px"
                 >김종은<span
                   style="
                     display: inline-block;
@@ -308,11 +308,12 @@
                     font-family: 'MonoplexKR-Regular';
                   "
                   >&middot;</span
-                >권영애의 장남
+                >권영애
               </span>
+              의 장남
             </div>
             <div class="relation_list bride">
-              <span var="brideDadLastName"
+              <span var="brideDadLastName" style="font-size: 13.6px"
                 >이정엽<span
                   style="
                     display: inline-block;
@@ -320,8 +321,9 @@
                     font-family: 'MonoplexKR-Regular';
                   "
                   >&middot;</span
-                >김혜숙의 장녀</span
+                >김혜숙</span
               >
+              의 장녀
             </div>
           </div>
         </div>
@@ -543,18 +545,19 @@
         <div id="map" style="height: 300px; margin-bottom: 25px"></div>
         <div class="text_areas line_height_17">
           <p class="font_weight_bd">자동차</p>
-          <p>서울특별시 영등포구 국회대로76길 16 여의도 켄싱턴호텔</p>
+          <p>서울특별시 영등포구 국회대로76길 16</p>
+          <p>여의도 켄싱턴호텔</p>
           <br />
           <p class="font_weight_bd">버스</p>
           <p>- 국회의사당, 국민은행 앞 하차</p>
-          <p>&nbsp;&nbsp;10, 70-2, 162, 163,260, 361, 5615,</p>
-          <p>&nbsp;&nbsp;5618, 6713,7613, G7625, 영등포10</p>
+          <p>&nbsp;&nbsp;&nbsp;10, 70-2, 162, 163,260, 361, 5615,</p>
+          <p>&nbsp;&nbsp;&nbsp;5618, 6713,7613, G7625, 영등포10</p>
           <p>- 국회의사당 앞 하차</p>
-          <p>&nbsp;&nbsp;1002, 163, 461,463,6623,6713</p>
+          <p>&nbsp;&nbsp;&nbsp;1002, 163, 461,463,6623,6713</p>
           <p>- 켄싱턴호텔 여의도 하차</p>
-          <p>&nbsp;&nbsp;공항버스 6007</p>
+          <p>&nbsp;&nbsp;&nbsp;공항버스 6007</p>
           <p>- 여의도 순복음교회 앞 하차</p>
-          <p>&nbsp;&nbsp;10,261, 463, 5633, 5634, 영등포10</p>
+          <p>&nbsp;&nbsp;&nbsp;10,261, 463, 5633, 5634, 영등포10</p>
           <br />
           <p class="font_weight_bd">지하철</p>
           <p>9호선 국회의사당역 하차 - 1,2,3번 출구 - 도보 5분</p>
@@ -819,7 +822,11 @@
           />
         </div>
         <p style="font-size: 11.6px">준수와 예나의 결혼식 - 모두의 사랑 속에</p>
-        <p style="font-size: 11.6px">Copyright © 2025 junsu & yena</p>
+        <p style="font-size: 11.6px">
+          Copyright
+          <span style="font-family: 'MonoplexKR-Regular'">©</span> 2025 junsu &
+          yena
+        </p>
         <!-- <p>문의: <a href="mailto:wedding@example.com">wedding@example.com</a></p> -->
       </div>
     </footer>
