feat: main 메인 사진 업데이트

--- a/index.html
+++ b/index.html
@@ -235,25 +235,14 @@
           <div class="img_con row_couple_name">
             <div class="img_box">
               <img
-                src="./image/21.jpg"
+                src="./image/mm.jpg"
                 alt=""
                 var="groomImgId"
                 style="display: block; object-position: 50% 25%"
               />
             </div>
             <div class="img_box">
-              <img
-                src="./image/20.jpg"
-                alt=""
-                var="brideImgId"
-                style="
-                  display: block;
-                  object-position: 50% 20%;
-                  scale: 2.1;
-                  position: relative;
-                  left: -18px;
-                "
-              />
+              <img src="./image/ms.jpg" alt="" var="brideImgId" />
             </div>
           </div>
           <div class="name_con row_couple_name">
